# scikit-surgery-stats

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  cookiecutter.json  dashboard.html  excluded.html.in.head  get_badges.py  get_github_repos.py  get_loc.py  get_pypi_repos.py  index.html  loc_plot.html  mypy.ini  pypi-simple-search  pyproject.toml  requirements.txt  scikit-surgery-ongithub.txt  scikit-surgery-onpypi.txt  update_dashboard.py  update_github_stats.py  update_pypi_stats.py
hooks/: pre_gen_project.py
html/: dashboard.html  dashboard.html.in.head  exclusions.html  index.html
libraries/: .github  ArUcoPatternMaker  Blood-Vessel-Game  CMakeCatchTemplate  PythonTemplate  README.txt  SciKit-SurgeryAudio  SciKit-SurgeryParallax  TrackingCollar  bard-data  browser_ar  cut-the-string  dashboard_for_scikit-surgery  dashboard_for_scikit_surgery  glenoidplanefitting  imshowTk  luminance_study  ndicapi  recruitment  rsecon23-workshop41  scikit-surgery  scikit-surgery-evaluation  scikit-surgery-rse2021-poster  scikit-surgery-sphere-fitting  scikit-surgery-sphere-fitting-test  scikit-surgery-stats  scikit-surgeryarucotracker  scikit-surgerybard  scikit-surgerybk  scikit-surgerycalibration  scikit-surgerychallenge  scikit-surgerycore  scikit-surgerydavinci  scikit-surgerydocker  scikit-surgeryfred  scikit-surgeryfred-paper  scikit-surgeryfredbackend  scikit-surgeryfredmatplotlib  scikit-surgeryglenoid-paper  scikit-surgerygoicp  (+25 more)
loc/: CMakeCatchTemplate.html  PythonTemplate.html  ndicapi.html  scikit-surgery-evaluation.html  scikit-surgery-sphere-fitting.html  scikit-surgery-stats.html  scikit-surgery.html  scikit-surgeryarucotracker.html  scikit-surgerybard.html  scikit-surgerybk.html  scikit-surgerycalibration.html  scikit-surgerychallenge.html  scikit-surgerycore.html  scikit-surgerydavinci.html  scikit-surgerydocker.html  scikit-surgeryfred-paper.html  scikit-surgeryfred.html  scikit-surgeryfredbackend.html  scikit-surgeryfredmatplotlib.html  scikit-surgeryimage.html  scikit-surgerynditracker.html  scikit-surgeryopencvcpp.html  scikit-surgerypclcpp.html  scikit-surgeryspeech.html  scikit-surgerysurfacematch.html  scikit-surgerytf.html  scikit-surgerytorch.html  scikit-surgerytrackervisualisation.html  scikit-surgerytutorial01.html  scikit-surgerytutorial02.html  scikit-surgeryutils.html  scikit-surgeryvtk.html  scikit-surgerywebapp.html  scikit_surgerycalibration_ros.html  snappysonic.html
(+66 files in other folders)
