[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm"
]

[project]
authors = [
  {email = "s.thompson@ucl.ac.uk", name = "scikit-surgery"}
]
classifiers = [
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]
dependencies = [
]
description = "This is the initial templating for the scikit-surgery-stats repo, to create a cookieninja template out of the dashboard deployment"
dynamic = [
  "version"
]
keywords = [
]
name = "dashboard-stats-template"
optional-dependencies = {dev = [
  "pypinfo",
  "pytest",
  "PyGithub",
  "cookieninja",
  "black",
  "build",
  "mypy",
  "pre-commit",
  "ruff",
  "tox",
  "twine"
]}
readme = "README.md"
requires-python = ">=3.10"
license.file = "LICENCE.md"
urls.homepage = "https://github.com/yidilozdemir/dashboard-stats-template"

[tool.coverage]
report = {skip_covered = true, sort = "cover"}
run = {branch = true, parallel = true, source = [
  "dashboard-stats-template"
]}
paths.source = [
  ".",
  ".tox*/*/lib/python*/site-packages"
]

[tool.mypy]
explicit_package_bases = true
plugins = [
  "numpy.typing.mypy_plugin",
  "pydantic.mypy"
]

[tool.ruff]
fix = true
force-exclude = true
ignore = [
  "D203", # no-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D417" # argument description in docstring (unreliable)
]
per-file-ignores = {"test_*" = [
  "S101"
]}
select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T",
  "TCH",
  "TID",
  "UP",
  "W",
  "YTT"
]
target-version = "py310"
isort.known-first-party = [
  "dashboard_stats_template"
]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = [
  "classmethod",
  "pydantic.validator"
]

[tool.tox]
legacy_tox_ini = """
    [gh-actions]
    python =
        3.10: py310
        3.11: py311

    [testenv]
    commands =
        pytest --cov
    deps =
        pytest
        pytest-cov

    [tox]
    env_list =
        py310
        py311
"""
